# sauna-monitor

parts/: easyeda.kicad_sym
parts/easyeda.3dshapes/: ANT-TH_BD5.5-L18.0-D0.8_470M_LORA_ANT.step  ANT-TH_BD5.5-L18.0-D0.8_470M_LORA_ANT.wrl  BULETM-SMD_ESPRESSIF_ESP32-C3-WROOM-02-N4-4MB.step  CONN-TH_4P-P2.50_ZX-XH2.54-4PWZ.step  CONN-TH_4P-P2.50_ZX-XH2.54-4PWZ.wrl  LED-SMD_4P-L3.2-W2.8-LS3.5-TL-1.step  LED-SMD_4P-L3.2-W2.8-LS3.5-TL-1.wrl  LED-SMD_6P-L5.0-W5.0-TL_TC5050RGBF08.step  LQFP-32_L7.0-W7.0-H1.4-LS9.0-P0.80.wrl  WIFIM-SMD_ESP32-C3-MINI-1.step
parts/easyeda.pretty/: ANT-TH_BD5.5-L18.0-D0.8_470M_LORA_ANT.kicad_mod  BULETM-SMD_ESPRESSIF_ESP32-C3-WROOM-02-N4-4MB.kicad_mod  CONN-TH_4P-P2.50_ZX-XH2.54-4PWZ.kicad_mod  ESP32-C6-MINI-1.kicad_mod  LED-SMD_4P-L3.2-W2.8-LS3.5-TL-1.kicad_mod  LED-SMD_6P-L5.0-W5.0-TL_TC5050RGBF08.kicad_mod  LQFP-32_L7.0-W7.0-P0.80-LS9.0-BL.kicad_mod  OLED-SMD_10P-P0.50_HS17QS178RX.kicad_mod  SW-SMD_L3.9-W3.0-P4.45.kicad_mod  USB-C-SMD_TYPE-C-6PIN-2MD-073.kicad_mod  WIFIM-SMD_61P-L16.6-W13.2-P0.80-ESP32-C6-MINI-1-N4.kicad_mod  WIFIM-SMD_ESP32-C3-MINI-1.kicad_mod  WIRELM-SMD_DL-LLCC68-S-915S.kicad_mod
sauna-combined/: sauna-combined.kicad_pcb  sauna-combined.kicad_pro  sauna-combined.kicad_sch
sauna-combined/production/: netlist.ipc
sauna-rx/: fp-lib-table  sauna-rx.kicad_pcb  sauna-rx.kicad_pro  sauna-rx.kicad_sch
sauna-rx/production/: netlist.ipc
sauna-tx/: sauna-tx.kicad_pcb  sauna-tx.kicad_pro  sauna-tx.kicad_sch  sym-lib-table
software/rx/: Cargo.toml
software/rx/.cargo/: config.toml
software/rx/src/: main.rs
(+1 files in other folders)
